--- a/ConfigSamples/FirePick.delta/config
+++ b/ConfigSamples/FirePick.delta/config
@@ -24,19 +24,34 @@ delta_z_offset					268.0  		  # Distance from delta 8mm rod/pulley to table/bed
 delta_ee_offs					15.000		  # Ball joint plane to bottom of end effector surface
 tool_offset					30.500		  # Distance between end effector ball joint plane and tip of tool (PnP)
 z_home_angle				       -67.200		  # This is the angle where the arms hit the endstop sensor
-delta_printable_radius			        150.0		  # Print surface diameter/2 minus unreachable space
+delta_printable_radius			        100.0		  # Print surface diameter/2 minus unreachable space
 
-xyz_full_steps_per_rotation			400.0		  # stepper motor steps per 360 full rotation
-								  # for 1.8 degree this is 200 for 0.9 degree this is 400
-
-#the steps per mm are calculated as (xyz_full_steps_per_rotation*xyz_microsteps*(big_pulley_teeth/small_pulley_teeth))/360
-# for a 0.9 degree stepper motor (400 steps per rotation) and an a4988   driver set for 16 microsteps = (400 * 16 * (150/16))/360 = 166.67
-# for a 1.8 degree stepper motor (200 steps per rotation) and an a4988   driver set for 16 microsteps = (200 * 16 * (150/16))/360 =  81.10
-# for a 0.9 degree stepper motor (400 steps per rotation) and an drv8825 driver set for 32 microsteps = (400 * 32 * (150/16))/360 = 331.49
-# for a 1.8 degree stepper motor (200 steps per rotation) and an drv8825 driver set for 32 microsteps = (200 * 32 * (150/16))/360 = 165.29
-alpha_steps_per_mm                            331.49           # Steps per mm for alpha stepper
-beta_steps_per_mm                             331.49           # Steps per mm for beta stepper
-gamma_steps_per_mm                            331.49           # Steps per mm for gamma stepper
+#The steps per mm are calculated as:
+#
+# (1) First determine the circumference of the big pulley, which has a smooth surface, and calculate the 'teeth it would have'
+# (2) Determine the GT2 belt thickness and tooth depth
+# (3) Calculate the ACTUAL big pulley circumference taking into account that the GT2 belt affects this as
+#     it rests on the big pulley and not into teeth cut into the pulley, the formula is:
+#     BIG_PULLEY_CIRCUMFERENCE = BIG_PULLEY_TEETH * TOOTH_SPACING + (BELT_THICKNESS - TOOTH_DEPTH)*6.283185
+# (4) Calculate the ACTUAL small pulley circumference taking into account that the GT2 belt affects this as
+#     rests into the small pulley as it has teeth cut into the pulley, the formula is:
+#     SMALL_PULLEY_CIRCUMFERENCE = SMALL_PULLEY_TEETH * TOOTH_SPACING
+# (5) Now determine the pulley reduction which is:
+#     PULLEY_REDUCTION = BIG_PULLEY_CIRCUMFERENCE / SMALL_PULLEY_CIRCUMFERENCE
+# (6) Finally, given the number of steps a stepper motor needs for a full 360 degree rotation, and the number of microsteps your
+#     stepper motor driver chip is set for, you can calculate the STEPS_PER_MM for each axis, which for a Rotary Delta, are the same:
+#    [ALPHA/BETA/GAMMA]_STEPS_PER_MM = (XYZ_STEPS_PER_ROTATION*XYZ_MICROSTEPS*PULLEY_REDUCTION)/360
+# Now for a FirePick Delta (http://delta.firepick.org ) mechanism, we can calulate:
+#    BIG_PULLEY_CIRCUMFERENCE = 150 * 2 + (1.49 - 0.74) * 6.283185 = 304.712389
+#    SMALL_PULLEY_CIRCUMFERENCE = 16 * 2 = 32
+#    PULLEY_REDUCTION = 304.712389 / 32 = 9.52226215
+#    For a 0.9 degree stepper motor and an a4988   driver set for 16 microsteps = (400 * 16 * 9.52226215)/360 = 169.2846604
+#    For a 1.8 degree stepper motor and an a4988   driver set for 16 microsteps = (200 * 16 * 9.52226215)/360 =  84.6423302
+#    For a 0.9 degree stepper motor and an drv8825 driver set for 32 microsteps = (400 * 32 * 9.52226215)/360 = 338.5693208
+#    For a 1.8 degree stepper motor and an drv8825 driver set for 32 microsteps = (200 * 32 * 9.52226215)/360 = 169.2846604
+alpha_steps_per_mm                            338.5693208      # Steps per mm for alpha stepper
+beta_steps_per_mm                             338.5693208      # Steps per mm for beta stepper
+gamma_steps_per_mm                            338.5693208      # Steps per mm for gamma stepper
 
 # Planner module configuration : Look-ahead and acceleration configuration
 planner_queue_size                           32               # DO NOT CHANGE THIS UNLESS YOU KNOW EXACTLY WHAT YOU ARE DOING
@@ -246,9 +261,9 @@ alpha_homing_retract_mm                      5                # retract/bounce d
 beta_homing_retract_mm                       5                #
 gamma_homing_retract_mm                      5                #
 
-alpha_trim                                   -65              # software trim for alpha stepper endstop (in mm)
-beta_trim                                    -65              # software trim for beta stepper endstop (in mm)
-gamma_trim                                   -65              # software trim for gamma stepper endstop (in mm)
+alpha_trim                                   -67.2            # software trim for alpha stepper endstop (in mm)
+beta_trim                                    -67.2            # software trim for beta stepper endstop (in mm)
+gamma_trim                                   -67.2            # software trim for gamma stepper endstop (in mm)
 
 #endstop_debounce_count                       100             # uncomment if you get noise on your endstops
 
@@ -257,7 +272,7 @@ zprobe.enable                                true            # set to true to en
 zprobe.probe_pin                             1.27!^          # pin probe is attached to if NC remove the !
 zprobe.slow_feedrate                         5               # mm/sec probe feed rate
 #zprobe.debounce_count                       100             # set if noisy
-zprobe.fast_feedrate                         100             # move feedrate mm/sec
+zprobe.fast_feedrate                         200             # move feedrate mm/sec
 zprobe.probe_height                          5               # how much above bed to start probe
 zprobe.negative_direction		     true	     # set to true for RotaryDelta arm solutions, false for all others
 
@@ -265,14 +280,14 @@ zprobe.negative_direction		     true	     # set to true for RotaryDelta arm solu
 leveling-strategy.ZGrid-leveling.enable         true	# The strategy must be enabled in the config as well as zprobe
 leveling-strategy.ZGrid-leveling.bed_x          90	# The bed size limits must be defined, in order for the module to calculate the calibration points
 leveling-strategy.ZGrid-leveling.bed_y          90
-leveling-strategy.ZGrid-leveling.bed_z          20	# Machine height, used to determine probe attachment point (bed_z / 2)
+leveling-strategy.ZGrid-leveling.bed_z          0	# Machine height, used to determine probe attachment point (bed_z / 2)
 leveling-strategy.ZGrid-leveling.center_zero    true	# Configure for Machines with bed 0:0 at center of platform
 leveling-strategy.ZGrid-leveling.bed_circular   false	# Configure for Machines with circular beds
-leveling-strategy.ZGrid-leveling.rows           5       # X divisions (Default 5)
-leveling-strategy.ZGrid-leveling.cols           5       # Y divisions (Default 5)
+leveling-strategy.ZGrid-leveling.rows           2       # X divisions (Default 5)
+leveling-strategy.ZGrid-leveling.cols           2       # Y divisions (Default 5)
 leveling-strategy.ZGrid-leveling.probe_offsets  0,0,5	# The probe offset should be defined, default to zero offset
 leveling-strategy.ZGrid-leveling.wait_for_probe  false	# The machine can be told to wait for probe attachment and confirmation
-leveling-strategy.ZGrid-leveling.slow_feedrate	100	# Slow feedrate can be defined for probe positioning speed.  Note this is not Probing slow rate - it can be set to a fast speed if required.
+leveling-strategy.ZGrid-leveling.slow_feedrate	300	# Slow feedrate can be defined for probe positioning speed.  Note this is not Probing slow rate - it can be set to a fast speed if required.
 
 # Pause button
 pause_button_enable                          true             #
